2002-08-20  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-find-source-under-point): Can now
	handle text like "foo:bar/2" - i.e. reads the arity correctly, so
	you can jump to definitions from e.g. export lists. Actual change
	made in `erl-get-arity'.
	(erl-find-source-under-point): When arity can't be determined,
	finds the first matching function of any arity. This is useful
	when you're writing a function call and can't remember what
	arguments/arities a function has - you can jump to the definition
	and see.

	* All: XEmacs and Emacs20 compatibility fixes (tested edb,
	erl-process-list).

2002-08-19  david wallin  <david.wallin@ul.ie>

	* elisp/distel.el (erlang-extended-mode): Added keybindings 
	for distel-ie.
	C-c C-d s : Start a session.
	C-c C-d c : Copy current buffer to a session.
	C-c C-d r : Copy a marked region in the current buffer to a session.

	* elisp/distel-ie.el (erl-ie-copy-buffer-to-session): Renamed
	erl-ie-copy-to-session.
	* elisp/distel-ie.el (erl-ie-copy-region-to-session): Same as 
	erl-ie-copy-buffer-to-session but works on a marked region.

2002-08-19  Luke Gorrie  <luke@bluetail.com>

	* elisp/distel.el, elisp/erlang-mode-ext.el: Renamed
	erlang-mode-ext.el to distel.el, so that it's obvious what the
	"top level" is. Now you need to (require 'distel) in your init
	file instead of (require 'erlang-mode-ext).

	* elisp/erl-service.el, distel.erl (fprof): Fixed the fprof
	interface to handle multiple processes. Used the compiler as a
	test case.

	The presentation of results is seriously inadequate for such large
	quantities of data. What's needed is a sexy tree layout like the
	OptimizeIt profiler for Java has.

2002-08-18  david wallin  <david@dolly.csis.ul.ie>

	* elisp/distel-ie.el (erl-ie-evaluate): Can now receive messages 
	that should go into the minibuffer.

	* elisp/distel-ie.el (erl-ie-evaluate): Slight correction on how
	the output of formatted.
