@@ -24,7 +24,7 @@ You can add this to erlang-mode-hook with:
   (add-hook 'erlang-mode-hook 'distel-erlang-mode-hook)"
   (erlang-extended-mode t))
 
-;; Extended feature key bindings (C-x C-d prefix)
+;; Extended feature key bindings (C-c C-d prefix)
 
 (define-minor-mode erlang-extended-mode
   "Extensions to erlang-mode for communicating with a running Erlang node.
@@ -61,6 +61,7 @@ cache, give a prefix argument with C-u before using the command.
     ("\C-c\C-ds" . erl-ie-session)
     ("\C-c\C-dc" . erl-ie-copy-buffer-to-session)
     ("\C-c\C-dr" . erl-ie-copy-region-to-session)
+    ("\C-\M-x"   . erl-ie-evaluate)
 
     ;; Possibly "controversial" shorter keys
     ("\M-."      . erl-find-source-under-point)	; usually `find-tag'
